1998-07-09  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Map.m ([Map_c -at:insert:]): Actually reject an insert for
	a pre-existing key.

	* collections.h (Map): Remove mention of DupOption.

	* Makefile.am (INCLUDES): Add misc.

1998-07-08  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* String.m: Don't include string.h.  Include misc.h.

	* InputStream.m, OutputStream.m: Don't include string.h or assert.h.

1998-07-08  Alex Lancaster  <alex@santafe.edu>

	* collections.h (KeyedCollection): Removed to design document
	-getCountAtKey:, -containsKey: methods, all are unimplemented.
	Removed comments for -{get,set}IndexFromMember:
	(KeyCollectionsIndex): Removed to design document commented-out
	-setMember method.
	(Map): Removed to design document -setKeyType:, setKeySize:
	methods, unimplemented.

1998-06-30  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* List_GEN.m ([... -next]): Return NULL if there is a wrap.

1998-06-25  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* String.m, collections.[hm]: Remove LiteralString.

1998-06-24  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* Makefile.am (lib_LIBRARIES, libcollections_a_SOURCES): Remove.
	(collections_HEADERS): Remove $(module_headers).
	(EXTRA_DIST): Add List_GEN.m.
	(install-data-local): New target.

1998-06-23  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* Makefile.am (lib_LTLIBRARIES, libcollections_la_SOURCES,
	libcollections_la_LDFLAGS, SRC, CURRENT, REVISION, AGE): New
	variables.  Set *_SOURCES from SRC.

1998-06-22  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* Makefile: Remove.

1998-06-21  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* Makefile.am: New file.

1998-06-17  Alex Lancaster  <alex@santafe.edu>

	* collections.m: Removed extern from LiteralString declaration.

1998-06-15  Alex Lancaster  <alex@santafe.edu>

	* Array.m ([Array_c -describe:]): Removed cast of pointer to
	unsigned long.

1998-06-14  Marcus G. Daniels  <mgd@ute.santafe.edu>
